--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://profileqr.onrender.com/api
 VITE_BACKEND_URL=http://localhost:5000
 VITE_GENERATE_SOURCEMAP=false
